k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qinglong
  labels:
    app: qinglong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qinglong
  template:
    metadata:
      labels:
        app: qinglong
    spec:
      containers:
        - name: qinglong
          image: whyour/qinglong:latest
          ports:
            - name: http
              containerPort: 5700
          volumeMounts:
            - mountPath: /ql/data
              name: qinglong-pvc
              subPath: data
            - mountPath: /root/.local/share/pnpm
              name: qinglong-pvc
              subPath: pnpm
      volumes:
        - name: qinglong-pvc
          persistentVolumeClaim:
            claimName: qinglong-pvc
