k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qinglong
spec:
  ports:
    - name: http
      port: 5700
      targetPort: http
  selector:
    app: qinglong
