k8s/qinglong-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qinglong-tls-ingress
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: qinglong.jerryshell.eu.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qinglong
                port:
                  name: http
  tls:
    - secretName: qinglong-tls
      hosts:
        - qinglong.jerryshell.eu.org
